<resources>
    <string name="app_name">CCPM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">动态</string>
    <string name="menu_items">我的项目</string>
    <string name="menu_task">我的任务</string>
    <string name="menu_my">我的资料</string>
    <string name="menu_setting">设置</string>
</resources>