<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iris.ccpm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.iris.ccpm.ui.project.ProjectFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.iris.ccpm.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.iris.ccpm.ui.my.MyFragment"
        android:label="@string/menu_my"
        tools:layout="@layout/fragment_my" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.iris.ccpm.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>